[package]
name = "bilirust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.4"
reqwest = "0.11.7"
rust-crypto = "0.2.36"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
serde_path_to_error = "0.1.7"
tokio = { version = "1.14.0", features = ["macros"] }
