[package]
name = "bilirust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.0"
reqwest = { version = "0.11.12", default-features = false, features = [] }
rust-crypto = "0.2.36"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_path_to_error = "0.1.8"
tokio = { version = "1.21.2", features = ["macros"] }

[features]
default = ["tokio-rustls"]
tokio-rustls = ["reqwest/tokio-rustls"]
tokio-native-tls = ["reqwest/tokio-native-tls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]