[package]
name = "bilirust"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", default-features = false, features = [] }
rust-crypto = "0.2.36"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_path_to_error = "0.1.11"
tokio = { version = "1.28.2", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "macros"] }

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
